Ajuste: Se termina diseño final para dispositivos Desktop, agregando seccion de videos y se corrige algunos detalles de otras secciones

--- a/index.html
+++ b/index.html
@@ -97,10 +97,9 @@
         </ul>
 
         <ul class="menu__lista">
+
             <li>
-                <a class="menu__itens" href="#">
-                    <i class="icono__mostrar icono-item"></i>
-                    <span>Mostrar más</span></a>
+                <a class="menu__itens suscripciones" href="#">SUSCRIPCIONES</a>
             </li>
 
             <li>
@@ -146,7 +145,9 @@
             </li>
 
             <li>
-                <a class="menu__itens suscripciones" href="#">Suscripciones</a>
+                <a class="menu__itens" href="#">
+                    <i class="icono__mostrar icono-item"></i>
+                    <span>Mostrar más</span></a>
             </li>
         </ul>
 
@@ -191,46 +192,53 @@
     </section>
 
     <!-- Vídeos -->
-    <!-- Para que se muestre el contenido de seccion de videos, remueve los simbolos de comentarios que estan en la linea 195 y 374 -->
-<!--     
+
     <ul class="videos__container">
         <li class="videos__item">
-            <iframe  width="100%"  height="72%" src="https://www.youtube.com/embed/PwheldW6V98?si=mJKUmresNkF_c4Q1" 
-            title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            <iframe width="100%" height="72%" src="https://www.youtube.com/embed/PwheldW6V98?si=mJKUmresNkF_c4Q1"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                allowfullscreen></iframe>
             <div class="descripcion-video">
                 <img src="./img/videos/Ellipse 11.png" alt="Logo del canal Alura Latam ">
                 <div class="detalles__video">
                     <h3>Descubre todo sobre el ChatGPT: Descifrando los Secretos de los Grandes</h3>
-                    <p>456  vistas - hace 2 semanas</p>
+                    <p>456 vistas - hace 2 semanas</p>
                 </div>
             </div>
         </li>
-       
+
         <li class="videos__item">
-            <iframe  width="100%"  height="72%" src="https://www.youtube.com/embed/r5T2aO9YXb0?si=aHWokvcs63ff33l1" 
-            title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            <iframe width="100%" height="72%" src="https://www.youtube.com/embed/r5T2aO9YXb0?si=aHWokvcs63ff33l1"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                allowfullscreen></iframe>
             <div class="descripcion-video">
                 <img src="./img/videos/Ellipse 11.png" alt="Logo del canal Alura Latam ">
                 <div class="detalles__video">
                     <h3>ChatGPT e Ingeniería de Prompts: técnicas para el prompt perfecto</h3>
-                    <p>618  vistas - hace 2 semanas</p>
+                    <p>618 vistas - hace 2 semanas</p>
                 </div>
             </div>
         </li>
         <li class="videos__item">
-            <iframe  width="100%"  height="72%" src="https://www.youtube.com/embed/qBrlvcQjrCA?si=NtRiXE2M6UXFpuVy" 
-            title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            <iframe width="100%" height="72%" src="https://www.youtube.com/embed/qBrlvcQjrCA?si=NtRiXE2M6UXFpuVy"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                allowfullscreen></iframe>
             <div class="descripcion-video">
                 <img src="./img/videos/Ellipse 11.png" alt="Logo del canal Alura Latam ">
                 <div class="detalles__video">
                     <h3>Funcionalidad en foco: introducción a la programación funcional #Aluratips</h3>
-                    <p>242  vistas - hace 1 mes</p>
+                    <p>242 vistas - hace 1 mes</p>
                 </div>
             </div>
         </li>
         <li class="videos__item">
-            <iframe  width="100%"  height="72%" src="https://www.youtube.com/embed/xdzz3_WqFmE?si=K3vRJxqY2Xt9v2D4" 
-            title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            <iframe width="100%" height="72%" src="https://www.youtube.com/embed/xdzz3_WqFmE?si=K3vRJxqY2Xt9v2D4"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                allowfullscreen></iframe>
             <div class="descripcion-video">
                 <img src="./img/videos/Ellipse 11.png" alt="Logo del canal Alura Latam ">
                 <div class="detalles__video">
@@ -240,8 +248,10 @@
             </div>
         </li>
         <li class="videos__item">
-            <iframe  width="100%"  height="72%"src="https://www.youtube.com/embed/DeM2Ak8tWFU?si=z9eTmcwKMhbGnOSM" 
-            title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            <iframe width="100%" height="72%" src="https://www.youtube.com/embed/DeM2Ak8tWFU?si=z9eTmcwKMhbGnOSM"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                allowfullscreen></iframe>
             <div class="descripcion-video">
                 <img src="./img/videos/Ellipse 11.png" alt="Logo del canal Alura Latam ">
                 <div class="detalles__video">
@@ -251,17 +261,23 @@
             </div>
         </li>
         <li class="videos__item">
-            <iframe  width="100%"  height="72%" src="https://www.youtube.com/embed/b5M9ws0X3FQ?si=BByTwoZV_195ifW0"
-             title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            <iframe width="100%" height="72%" src="https://www.youtube.com/embed/b5M9ws0X3FQ?si=BByTwoZV_195ifW0"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                allowfullscreen></iframe>
             <div class="descripcion-video">
                 <img src="./img/videos/Ellipse 11.png" alt="Logo del canal Alura Latam ">
-                <h3>WebScraping y análisis de datos #aluramás</h3>
-                <p>266 vistas - hace 2 meses</p>
+                <div class="detalles__video">
+                    <h3>WebScraping y análisis de datos #aluramás</h3>
+                    <p>266 vistas - hace 2 meses</p>
+                </div>
             </div>
         </li>
         <li class="videos__item">
-            <iframe  width="100%"  height="72%" src="https://www.youtube.com/embed/1EJ69twpnMo?si=77XLahry_zDuc666"
-             title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            <iframe width="100%" height="72%" src="https://www.youtube.com/embed/1EJ69twpnMo?si=77XLahry_zDuc666"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                allowfullscreen></iframe>
             <div class="descripcion-video">
                 <img src="./img/videos/Ellipse 11.png" alt="Logo del canal Alura Latam ">
                 <div class="detalles__video">
@@ -271,8 +287,10 @@
             </div>
         </li>
         <li class="videos__item">
-            <iframe  width="100%"  height="72%" src="https://www.youtube.com/embed/SAusS82-xQ0?si=w0csFllv1LjuLs7O" 
-            title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            <iframe width="100%" height="72%" src="https://www.youtube.com/embed/SAusS82-xQ0?si=w0csFllv1LjuLs7O"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                allowfullscreen></iframe>
             <div class="descripcion-video">
                 <img src="./img/videos/Ellipse 11.png" alt="Logo del canal Alura Latam ">
                 <div class="detalles__video">
@@ -282,8 +300,10 @@
             </div>
         </li>
         <li class="videos__item">
-            <iframe width="100%"  height="72%" src="https://www.youtube.com/embed/hNUuAYmGL1M?si=BLk4jJSDjyTHBoXO" 
-            title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>></iframe>
+            <iframe width="100%" height="72%" src="https://www.youtube.com/embed/hNUuAYmGL1M?si=BLk4jJSDjyTHBoXO"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                allowfullscreen>></iframe>
             <div class="descripcion-video">
                 <img src="./img/videos/Ellipse 11.png" alt="Logo del canal Alura Latam ">
                 <div class="detalles__video">
@@ -293,8 +313,10 @@
             </div>
         </li>
         <li class="videos__item">
-            <iframe width="100%"  height="72%" src="https://www.youtube.com/embed/AULPtYo25Lw?si=Cp7Ovqt-8SBA_3tj" 
-            title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            <iframe width="100%" height="72%" src="https://www.youtube.com/embed/AULPtYo25Lw?si=Cp7Ovqt-8SBA_3tj"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                allowfullscreen></iframe>
             <div class="descripcion-video">
                 <img src="./img/videos/Ellipse 11.png" alt="Logo del canal Alura Latam ">
                 <div class="detalles__video">
@@ -304,8 +326,10 @@
             </div>
         </li>
         <li class="videos__item">
-            <iframe width="100%"  height="72%" src="https://www.youtube.com/embed/zOetOoeOrOg?si=R64GU4elwkU-ce7V" 
-            title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            <iframe width="100%" height="72%" src="https://www.youtube.com/embed/zOetOoeOrOg?si=R64GU4elwkU-ce7V"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                allowfullscreen></iframe>
             <div class="descripcion-video">
                 <img src="./img/videos/Ellipse 11.png" alt="Logo del canal Alura Latam ">
                 <div class="detalles__video">
@@ -315,8 +339,10 @@
             </div>
         </li>
         <li class="videos__item">
-            <iframe width="100%"  height="72%" src="https://www.youtube.com/embed/VKj8MlylaPg?si=3nhakwSHEgqM_RL6" 
-            title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            <iframe width="100%" height="72%" src="https://www.youtube.com/embed/VKj8MlylaPg?si=3nhakwSHEgqM_RL6"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                allowfullscreen></iframe>
             <div class="descripcion-video">
                 <img src="./img/videos/Ellipse 11.png" alt="Logo del canal Alura Latam ">
                 <div class="detalles__video">
@@ -326,8 +352,10 @@
             </div>
         </li>
         <li class="videos__item">
-            <iframe width="100%"  height="72%" src="https://www.youtube.com/embed/CpL7-sbW2O0?si=nBPiodanhasOV7D8"
-             title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            <iframe width="100%" height="72%" src="https://www.youtube.com/embed/CpL7-sbW2O0?si=nBPiodanhasOV7D8"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                allowfullscreen></iframe>
             <div class="descripcion-video">
                 <img src="./img/videos/Ellipse 11.png" alt="Logo del canal Alura Latam ">
                 <div class="detalles__video">
@@ -337,8 +365,10 @@
             </div>
         </li>
         <li class="videos__item">
-            <iframe width="100%"  height="72%" src="https://www.youtube.com/embed/QjOWz9avkg8?si=hLgmCHaYTWoHi03R" 
-            title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            <iframe width="100%" height="72%" src="https://www.youtube.com/embed/QjOWz9avkg8?si=hLgmCHaYTWoHi03R"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                allowfullscreen></iframe>
             <div class="descripcion-video">
                 <img src="./img/videos/Ellipse 11.png" alt="Logo del canal Alura Latam ">
                 <div class="detalles__video">
@@ -348,8 +378,10 @@
             </div>
         </li>
         <li class="videos__item">
-            <iframe width="100%"  height="72%" src="https://www.youtube.com/embed/PztCEdIJITY?si=5fxDg327jUp5TA_X" 
-            title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            <iframe width="100%" height="72%" src="https://www.youtube.com/embed/PztCEdIJITY?si=5fxDg327jUp5TA_X"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                allowfullscreen></iframe>
             <div class="descripcion-video">
                 <img src="./img/videos/Ellipse 11.png" alt="Logo del canal Alura Latam ">
                 <div class="detalles__video">
@@ -359,19 +391,21 @@
             </div>
         </li>
         <li class="videos__item">
-            <iframe width="100%"  height="72%" src="https://www.youtube.com/embed/3W983Q2NzRI?si=eCcE3jEyAUJu_tju" 
-            title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            <iframe width="100%" height="72%" src="https://www.youtube.com/embed/3W983Q2NzRI?si=eCcE3jEyAUJu_tju"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                allowfullscreen></iframe>
             <div class="descripcion-video">
                 <img src="./img/videos/Ellipse 11.png" alt="Logo del canal Alura Latam ">
                 <div class="detalles__video">
-                    <h3>¿Qué es la lógica de programación  #AluraMás</h3>
+                    <h3>¿Qué es la lógica de programación #AluraMás</h3>
                     <p>95 k vistas - hace 1 año</p>
                 </div>
             </div>
         </li>
-        
-    </ul>  
--->
+
+    </ul>
+
 
     <!-- <SECCIÓN rodapié> -->
     <footer class="rodapie__container">
