Ajuste: Se termina el diseño final para dispotivos tablet y dispotivos moviles, ademas, de agregan nuevos breakpoint para ubicar 3 contenedores y se ordena el codigo css

--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@
 
     <!-- <SECCIÓN rodapié> -->
     <footer class="rodapie__container">
-        <section>
+        <section class="rodapie__item">
             <h2 class="rodapie__titulo">Programación</h2>
             <p class="rodapie__texto">Lógica</p>
             <p>Python</p>
@@ -419,7 +419,7 @@
             <p>Node JS</p>
         </section>
 
-        <section>
+        <section class="rodapie__item">
             <h2 class="rodapie__titulo">Data Science</h2>
             <p class="rodapie__texto">Ciencia de datos</p>
             <p>BI</p>
@@ -429,7 +429,7 @@
             <p>NoSQL</p>
         </section>
 
-        <section>
+        <section class="rodapie__item">
             <h2 class="rodapie__titulo">UX e Design</h2>
             <p class="rodapie__texto">Photoshop</p>
             <p>Illustrator</p>
@@ -439,7 +439,7 @@
             <p>Interfaz</p>
         </section>
 
-        <section>
+        <section class="rodapie__item">
             <h2 class="rodapie__titulo">Inovación y Gestión</h2>
             <p class="rodapie__texto">Metodologías ágiles</p>
             <p>Softskills</p>
@@ -449,7 +449,7 @@
             <p>Ventas</p>
         </section>
 
-        <section>
+        <section class="rodapie__item">
             <h2 class="rodapie__titulo">Front-end</h2>
             <p class="rodapie__texto">HTML</p>
             <p>CSS</p>
@@ -459,7 +459,7 @@
             <p>jQuery</p>
         </section>
 
-        <section>
+        <section class="rodapie__item">
             <h2 class="rodapie__titulo">Devops</h2>
             <p class="rodapie__texto">AWS</p>
             <p>Azure</p>
@@ -469,7 +469,7 @@
             <p>Linux</p>
         </section>
 
-        <section>
+        <section class="rodapie__item">
             <h2 class="rodapie__titulo">Mobile</h2>
             <p class="rodapie__texto">React Native</p>
             <p>Flutter</p>
